--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         직업캐 찾기!
     </h1>
     <img src="./images/main_character.png" alt="캐릭터" class="character">
-    <a href="./questions.html" class="btn btn_orange">
+    <a href="questions.html" class="btn btn_orange">
         본캐 찾으러 GO!
     </a>
     <div class="btn btn_green btn_small share-or-copy">
